# cmake_project

./: README.md
project3/roof/: CMakeLists.txt
project3/roof/client/: CMakeLists.txt
project3/roof/lib/: CMakeLists.txt
project4/: CMakeLists.txt  pdip.c  pdip_chown.cmake  pdip_en.1  pdip_fr.1
project5/roof/: CMakeLists.txt
project5/roof/client/: CMakeLists.txt
project5/roof/include/: CMakeLists.txt
project6/roof/: CMakeLists.txt
project6/roof/lib/: CMakeLists.txt
project6/roof/man/: CMakeLists.txt  FindGZIP.cmake
project7/: CMakeLists.txt  config.h.cmake  main.c
project8/: CMakeLists.txt  Kbuild  config.h.cmake  udp_console_k.c  udp_console_u.c
project9/: CMakeLists.txt  hello.cc
